Settings: Add incall vibration options [3/3]
* allow setting vibration when call is connected
* allow setting vibration when call is disconnected
* allow setting vibration for call waiting
* this works with google and aosp dialer :)

[arrow-13.0]:
- Move inside accessibility_vibration_settings
  as all the aosp vibration toggles are there

includes:
fixup! Settings: incall vibration options [3/3]

[ghostrider-reborn]
- Enable by default
- Add to the slider-based prefs page as well

Change-Id: I55e99f501a3af07287c57a23939666351f4cef67
Signed-off-by: Karan Parashar <whyredfire@gmail.com>
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/res/values/candy_strings.xml
+++ b/res/values/candy_strings.xml
@@ -147,4 +147,10 @@
     <string name="duration_less_than_one_minute">Less than 1 Minute</string> 
     <!-- Summary for Wellbeing screen time usage. [CHAR LIMIT=NONE] -->
     <string name="screen_time_summary_usage_today">%1$s today</string>
+
+    <!-- Incall vibrate options -->
+    <string name="incall_vibration_category">In-call vibration options</string>
+    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
+    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
+    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
 </resources>
